adicionar jdbc url